[package]
name = "hedge_server"
version = "0.1.0"
authors = ["Chad Russell <chaddouglasrussell@gmail.com>"]
edition = "2018"

[dependencies]
actix-cors = "0.4.1"
actix-web = { version = "3.0.0-alpha.2", features=["rustls"] }
actix-rt = "1.1"
actix-http = "2.0.0-alpha.4"
bincode = "1.3.1"
chrono = "0.4.11"
rand = "0.7.3"
rustls = "0.17.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.55"
statrs = "0.12.0"
